--- a/assets/css/bootstrap/less/forms.less
+++ b/assets/css/bootstrap/less/forms.less
@@ -21,19 +21,23 @@ legend {
   display: block;
   width: 100%;
   padding: 0;
-  margin-bottom: @line-height-computed;
-  font-size: (@font-size-base * 1.5);
+  margin-bottom: 10px;
+  font-size: @font-size-h3;
+  font-family: @headings-font-family;
+  .text-uppercase;
   line-height: inherit;
   color: @legend-color;
   border: 0;
-  border-bottom: 1px solid @legend-border-color;
+  /*border-bottom: 1px solid @legend-border-color;*/
 }
 
 label {
+  font-size: @font-size-small;
+  color: #808186;
   display: inline-block;
   max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
-  margin-bottom: 5px;
-  font-weight: bold;
+  margin-bottom: 1px;
+  /*font-weight: bold;*/
 }
 
 
