--- a/assets/css/bootstrap/less/buttons.less
+++ b/assets/css/bootstrap/less/buttons.less
@@ -17,6 +17,7 @@
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
   white-space: nowrap;
+  width: 100%;
   .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @btn-border-radius-base);
   .user-select(none);
 
@@ -47,7 +48,7 @@
   &[disabled],
   fieldset[disabled] & {
     cursor: @cursor-disabled;
-    .opacity(.65);
+    .opacity(.2);
     .box-shadow(none);
   }
 
@@ -64,26 +65,32 @@
 // --------------------------------------------------
 
 .btn-default {
-  .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
+  .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border; #666);
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    .opacity(1);
+    color: #d3d4d8;
+  }
 }
 .btn-primary {
-  .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border);
+  .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border; #0e1116);
 }
 // Success appears as green
 .btn-success {
-  .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border);
+  .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border; #075025);
 }
 // Info appears as blue-green
 .btn-info {
-  .button-variant(@btn-info-color; @btn-info-bg; @btn-info-border);
+  .button-variant(@btn-info-color; @btn-info-bg; @btn-info-border; #666);
 }
 // Warning appears as orange
 .btn-warning {
-  .button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border);
+  .button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border; #666);
 }
 // Danger and error appear as red
 .btn-danger {
-  .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border);
+  .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border; #530b19);
 }
 
 
