--- a/assets/css/bootstrap/less/mixins/buttons.less
+++ b/assets/css/bootstrap/less/mixins/buttons.less
@@ -3,14 +3,14 @@
 // Easily pump out default styles, as well as :hover, :focus, :active,
 // and disabled options for all buttons
 
-.button-variant(@color; @background; @border) {
+.button-variant(@color; @background; @border; @shadow-color) {
   color: @color;
   background-color: @background;
   border-color: @border;
 
   &:focus,
   &.focus {
-    /*color: @color;*/
+    color: @color;
     /*background-color: darken(@background, 10%);*/
         /*border-color: darken(@border, 25%);*/
     
@@ -23,12 +23,12 @@
   &.active,
   .open > .dropdown-toggle& {
     background-color: @background;
-    .box-shadow(inset 0 2px 0px #666);
+    .box-shadow(inset 0 2px 0px @shadow-color);
 
     &:hover,
     &:focus,
     &.focus {
-      .box-shadow(inset 0 2px 0px #666);
+      .box-shadow(inset 0 2px 0px @shadow-color);
     }
   }
   &:active,
