--- a/assets/css/bootstrap/less/forms.less
+++ b/assets/css/bootstrap/less/forms.less
@@ -460,7 +460,8 @@ input[type="checkbox"] {
   display: block; // account for any element using help-block
   margin-top: 5px;
   margin-bottom: 10px;
-  color: lighten(@text-color, 25%); // lighten the text some for contrast
+  color: lighten(@text-color, 30%); // lighten the text some for contrast
+  font-size: 11px;
 }
 
 
