--- a/assets/css/bootstrap/less/navs.less
+++ b/assets/css/bootstrap/less/navs.less
@@ -75,10 +75,18 @@
 // Give the tabs something to sit on
 .nav-tabs {
   border-bottom: 1px solid @nav-tabs-border-color;
+  font-family: @heavy-font-family;
+  font-size: 10px;
+  .text-uppercase;
   > li {
     float: left;
     // Make the list-items overlay the bottom border
     margin-bottom: -1px;
+    
+    padding-left: 0;
+    &::before {
+      content: none;
+    }
 
     // Actual tabs (as links)
     > a {
