--- a/assets/css/bootstrap/less/type.less
+++ b/assets/css/bootstrap/less/type.less
@@ -25,7 +25,7 @@ h1, .h1,
 h2, .h2,
 h3, .h3 {
   margin-top: 0; //@line-height-computed;
-  margin-bottom: (@line-height-computed / 2);
+  margin-bottom: (@line-height-computed / 2) + 4;
 
   small,
   .small {
