--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -1,11 +1,11 @@
-@import "./fonts/Lato/latofonts.css";
-@import "./bootstrap/less/bootstrap.less";
-
 @fixed-max-width: 1170px;
 @img-path: 'img/';
 @sprite: 'img/sprite.png';
 /*@accent-font-family: "PF DinDisplay Pro Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-/*@italic-font-family: "LatoWebBlack", @font-family-sans-serif;*/
+@heavy-font-family: "LatoWebHeavy", "LatoWebBlack", @font-family-sans-serif;
+
+@import "./fonts/Lato/latofonts.css";
+@import "./bootstrap/less/bootstrap.less";
 
 /* dev */
 /*html {
@@ -14,20 +14,23 @@
 body {
   //height: 100%;
   position: relative;
-  &::_after {
+  &::after {
     content: "";
     background: url('@{img-path}design.jpg') no-repeat; // fixed;
     background-size: auto;
     background-position-x: center;
     background-position-y: 0;
-    opacity: 0.7;
+    opacity: 0.4;
     top: 0px;
-    left: -20px;
+    left: 0px;
     bottom: 0;
     right: 0;
     position: absolute;
     z-index: -1;
   }
+}
+* {
+  transition: all 0.2s ease-in-out 0s;
 }
 
 /* typografy */
@@ -37,7 +40,32 @@ h1, h2, h3 {
 strong, b {
   font-family: @headings-font-family;
   font-weight: @headings-font-weight;
-}/*
+}
+ul {
+  .list-unstyled;
+  color: @gray;
+  li {
+    padding-left: 11px;
+    position: relative;
+    &::before {
+      content: '\2022';
+      position: absolute;
+      left: 0;
+    }
+  }
+}
+.list-unstyled {
+  li {
+    padding-left: 0;
+    &::before {
+      content: none;
+    }
+  }
+}
+section {
+  margin-bottom: 50px;
+}
+/*
 em, i {
   font-family: @italic-font-family;
 }*/
@@ -127,6 +155,10 @@ form.well-form {
     .form-control;
   }
 }
+/* tabs */
+.tabs {
+  .nav; .nav-tabs;
+}
 
 .banner {
   display: block;
@@ -148,9 +180,6 @@ form.well-form {
   .right-column {
     flex: 1;
   }
-}
-* {
-  transition: all 0.2s ease-in-out 0s;
 }
 @header-height: 100px;
 header {
@@ -532,6 +561,27 @@ span.icon {
     background-position: 0 -16px;
   }
 }
+a.icon {
+  .hide-text;
+  display: inline-block;
+  vertical-align: middle;
+  width: 18px;
+  height: 18px;
+  margin: 0 5px;
+  background: url('@{sprite}') no-repeat;
+  &.compare {
+    background-position: 0 -80px;
+    &.active {
+      background-position: -18px -80px;
+    }
+  }
+  &.favorite {
+    background-position: 0 -104px;
+    &.active {
+      background-position: -18px -104px;
+    }
+  }
+}
 
 /* основное меню в левой колонке */
 .aside-menu {
@@ -613,6 +663,123 @@ span.icon {
         width: 126px;
         margin-right: 15px;
       }
+    }
+  }
+}
+
+/* goods */
+.cost {
+  color: #41b492;
+  font-size: 16px;
+  font-family: @headings-font-family;
+  padding-right: 5px;
+}
+.cost-old {
+  text-decoration: line-through;
+}
+.discount {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: @brand-danger;
+  color: @body-bg;
+  font-family: @heavy-font-family;
+  line-height: 50px;
+  text-align: center;
+}
+.goods {
+  display: flex;
+  margin-bottom: 33px;
+  .goods-gallery {
+    max-width: 420px;
+    margin-right: 50px;
+    ul {
+      .list-unstyled;
+    }
+  }
+  .goods-info {
+    position: relative;
+    h1 {
+      margin-top: 40px;
+      margin-bottom: 22px;
+    }
+    p {
+      line-height: 17px;
+      color: @gray;
+      strong {
+        font-weight: normal;
+        color: initial;
+        font-family: @font-family-base;
+      }
+      &.price {
+        margin-bottom: 25px;
+      }
+      .cost {
+        font-size: 20px;
+      }
+    }
+    button {
+      width: auto;
+      margin-right: 5px;
+    }
+  }
+}
+.goods-tabs {
+  > div {
+    padding: 40px 6px 0;
+  }
+  #info {
+    > div {
+      > .content {
+        display: inline-block;
+        max-width: 640px;
+        padding-right: 50px;
+        color: @gray;
+      }
+      > .options {
+        display: inline-block;
+      }
+      line-height: 17px;
+    }
+  }
+}
+.related-goods {
+  h2 {
+    margin-bottom: 50px;
+  }
+}
+.goods-list-grid {
+  display: flex;
+  align-items: stretch;
+  .goods-list-item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+    text-align: center;
+    h3 {
+      margin: 20px 0 10px;
+    }
+    .content {
+      flex: 1;
+    }
+    .footer {
+      > * {
+        display: inline-block;
+        vertical-align: middle;
+      }
+      form {
+        width: 100px;
+      }
+      div {
+        width: 85px;
+      }
+    }
+    .discount {
+      top: -10px;
+      right: 6px;
     }
   }
 }
